--- a/style.css
+++ b/style.css
@@ -188,7 +188,10 @@ input[type="text"], input[type="date"] {
         color: whitesmoke;
         position: absolute;
         transform: scale(0.15) rotate(0deg);
-        margin: -2650px -750px;
+        margin: -2500px -750px;
+    }
+    .ann{
+        scale: 0.7;
     }
     .container {
         background-color:rgba(0, 58, 116, 0.432);
@@ -204,7 +207,7 @@ input[type="text"], input[type="date"] {
         color: whitesmoke;
         position: absolute;
         transform: scale(0.15) rotate(0deg);
-        margin: -2650px -750px;
+        margin: -2550px -750px;
     }
     .container {
         background-color:rgba(0, 58, 116, 0.432);
@@ -215,3 +218,8 @@ input[type="text"], input[type="date"] {
         margin-bottom: 5px;
     }
 }
+
+footer{
+    margin-top: 24%;
+}
+
